# rjtools.util

./: .gitignore  LICENSE.txt  README.md  collections.py  convert.py  file.py  fs.py  log.py  msg.py  pyproject.toml  schema.py  storeconverter.py  testing.py  testutil.py  type.py
src/dgutil/: collection.py  fs.py  log.py  log.pyi  msg.py  schema.py  testing.py  testutil.py  testutil.pyi  type.pyi
src/dgutil/test/: __init__.py  convert.py  testfs.py  testing.py  type_check.py
src/rjtools/util/: collection.pyi  fs.py  fs.pyi  msg.py  testing.py  testing.pyi  testutil.py  testutil.pyi
src/types-dgutil/dgutil/: convert.pyi  fs.pyi  msg.pyi  schema.pyi  testing.pyi
test/: __init__.py  __main__.py  amount_to_grams.py  convert.py  files.py  log.py  parse_date.py  parse_nonnumeric.py  parse_numeric.py  testfs.py  testing.py  type_check.py
test/testapp/: __main__.py
test/testapp/test/: __init__.py  __main__.py  badtest.py  mytest.py
