[project]
name = "util"
version = "0.0.2"
authors = [
    { name="Rich Joiner", email="rich@deerhoofgardens.com" },
]
description = "A library of utilities for logging and testing Python apps"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }

[project.urls]
Homepage = "https://github.com/blackoutjack/rjtools.util"
